# okrolearn

./: README.md  TODO.md  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md
src/: __about__.py  okrolanalysis.py  okrolearn.py  okrolvision.py
src/okrolearn/: __about__.py  dataset.py  okrolanalysis.py  okrolearn.py  okroltext.py  okrolvision.py  optimizers.py  tensor.py
tests/: adaelta.py  adam_test.py  analasis.py  analysis_test.py  avg_polling_test.py  bagging_and_boosting.py  batch_test.py  bilinear_test.py  conv1d.py  conv2d.py  conv3d.py  cross_val_test.py  data.json  data_test.py  dataset_test.py  distance.py  dot_test.py  emb_test.py  encoder_decoder_test.p.py  fold_test.py  full,cat.py  full-cat_test.py  gradient.py  gru_test.py  instance_test.py  kernel_test.py  l1_test.py  l2_test.py  l3_test.py  loss_test.py  ltsm_test.py  nadam.py  network_test.py  other_tensor_test.py  pad_layer_test.py  pandas_test.py  polling_test.py  pollymonial_test.py  procces_test.py  rank.py  (+19 more)
