[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okrolearn"
dynamic = ["version"]
description = 'A machine learning library created by Okerew, which is supposed to be a raw implementation of combining pytorch with scikit-learn'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Okerew", email = "93822247+Okerew@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "statsmodels",
  "pandas",
  "matplotlib",
  "scipy",
  "pillow",
  "opencv-python"
]

[project.urls]
Documentation = "https://github.com/Okerew/okrolearn#readme"
Issues = "https://github.com/Okerew/okrolearn/issues"
Source = "https://github.com/Okerew/okrolearn"

[tool.hatch.version]
path = "src/okrolearn/__about__.py"

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/okrolearn tests}"

[tool.coverage.run]
source_pkgs = ["okrolearn", "tests"]
branch = true
parallel = true
omit = [
  "src/okrolearn/__about__.py",
]

[tool.coverage.paths]
okrolearn = ["src/okrolearn", "*/okrolearn/src/okrolearn"]
tests = ["tests", "*/okrolearn/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/okrolearn"]
